2007-01-17  Eric Seidel  <eric@webkit.org>

        Reviewed by mitz and rwlbuis.
        
        SVGs don't work as background images.
        http://bugs.webkit.org/show_bug.cgi?id=12096

        * fast/images/svg-as-background-expected.checksum:
        * fast/images/svg-as-background-expected.png:
        * fast/images/svg-as-tiled-background-expected.checksum:
        * fast/images/svg-as-tiled-background-expected.png:

2007-01-16  Justin Garcia  <justin.garcia@apple.com>

        Reviewed by harrison
        
        <rdar://problem/4747450>
        Gmail Editor: Caret doesn't always position itself after list marker
        <rdar://problem/4917055>
        GMail Editor: A hang can occur when attempting to apply list styling to selected indented text

        Added:
        * editing/execCommand/4747450-expected.checksum: Added.
        * editing/execCommand/4747450-expected.png: Added.
        * editing/execCommand/4747450-expected.txt: Added.
        * editing/execCommand/4747450.html: Added.
        * editing/execCommand/4917055-expected.txt: Added.
        * editing/execCommand/4917055.html: Added.
        Fixed:
        * editing/execCommand/create-list-with-hr-expected.checksum:
        * editing/execCommand/create-list-with-hr-expected.png:
        * editing/execCommand/create-list-with-hr-expected.txt:

2007-01-16  Darin Adler  <darin@apple.com>

        - updated one more test results affected by Rob's coordinates patch

        * svg/W3C-SVG-1.1/coords-units-03-b-expected.checksum: Regenerated.
        * svg/W3C-SVG-1.1/coords-units-03-b-expected.png: Ditto.
        * svg/W3C-SVG-1.1/coords-units-03-b-expected.txt: Ditto.

2007-01-15  Rob Buis  <buis@kde.org>

        Reviewed by Eric.

        Testcase for:
        http://bugs.webkit.org/show_bug.cgi?id=12272
        SVG picture is clipped (edges not visible)

        Also updated test results(all improvements, matches Opera
        and FF).
